--- a/HomeVent/platformio.ini
+++ b/HomeVent/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 
-lib_deps = Time
+; upload_port = 192.168.0.109
+upload_port = COM[9]
 
 monitor_speed = 115200
