--- a/HomeVent/platformio.ini
+++ b/HomeVent/platformio.ini
@@ -9,11 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
-platform = espressif32
+platform = espressif32@1.10.0
 board = esp32doit-devkit-v1
 framework = arduino
 
-; upload_port = 192.168.0.109
+;upload_port = 192.168.0.109
 upload_port = COM[9]
 
 monitor_speed = 115200
