--- a/HomeVent/platformio.ini
+++ b/HomeVent/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
-platform = espressif32@1.10.0
+platform = espressif32@1.11.0
 board = esp32doit-devkit-v1
 framework = arduino
 
@@ -17,3 +17,6 @@ framework = arduino
 upload_port = COM[9]
 
 monitor_speed = 115200
+
+lib_deps =
+     Time@1.5
