--- a/Krb/platformio.ini
+++ b/Krb/platformio.ini
@@ -8,15 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
-platform = espressif32@1.11.1
-board = esp32doit-devkit-v1
+[env:micro]
+platform = atmelavr
+board = micro
 framework = arduino
 
-;upload_port = 192.168.0.109
-upload_port = COM[9]
-
-monitor_speed = 115200
-
 lib_deps =
-     Time@1.5
+  # Using a library name
+  Low-Power
