--- a/MHZ19/platformio.ini
+++ b/MHZ19/platformio.ini
@@ -9,10 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:d1]
-platform = atmelavr
-board = uno
+; platform = atmelavr
+; board = uno
+platform = espressif8266
+board = d1
 framework = arduino
 
 lib_deps = 
   MH-Z19
   TM1637
+  RunningMedian
