--- a/Krb/platformio.ini
+++ b/Krb/platformio.ini
@@ -10,9 +10,12 @@
 
 [env:micro]
 platform = atmelavr
-board = micro
+board = 328p8m
 framework = arduino
 
 lib_deps =
   # Using a library name
   Low-Power
+  OneWire
+  DallasTemperature
+  TM1637
