--- a/server/platformio.ini
+++ b/server/platformio.ini
@@ -13,7 +13,8 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 
-; upload_port = 192.168.0.110
+; upload_port = 192.168.0.112
+upload_port = 192.168.0.109
 monitor_speed = 115200
 
 lib_deps =
