--- a/server/platformio.ini
+++ b/server/platformio.ini
@@ -15,9 +15,10 @@ framework = arduino
 
 ; upload_port = 192.168.0.112
 upload_port = 192.168.0.109
-monitor_speed = 115200
+;monitor_speed = 115200
 
 lib_deps =
   ESP Async WebServer
   Time@1.5
   simpleDSTadjust
+  ArduinoJson
